# llm-learn-tmp-2026

./: README.md
lessons/: README.md
lessons/01_l3_foundations/: .gitignore  README.md  main_torch.py  pyproject.toml
lessons/01_l3_foundations/notebooks/: Untitled-1.ipynb  main_torch.ipynb
lessons/02_l4_tokens/: README.md  custom_ru_tokenizer.json  main_transformers_tokenizer.py  pyproject.toml
lessons/02_l4_tokens/notebooks/.ipynb_checkpoints/: main_transformers_tokenizer-checkpoint.ipynb
lessons/03_l8_ya_cloud_ya_gpt/: README.md  README_EN.md  README_RU.md  debug_api.py  main.py  ner_pipeline.py  pyproject.toml  result.json
lessons/03_l8_ya_cloud_ya_gpt/data/: docs_notes.txt
lessons/03_l8_ya_cloud_ya_gpt/data/documents/: doc_01_consulting.txt  doc_02_it_support.txt  doc_03_cleaning.txt  doc_04_marketing.txt  doc_05_accounting.txt  doc_06_nda_no_amount.txt  doc_07_training_ocr_noise.txt
lessons/03_l8_ya_cloud_ya_gpt/notebooks/: ner_report.ipynb
lessons/03_l8_ya_cloud_ya_gpt/results/: _summary.json  doc_01_consulting_ner.json  doc_02_it_support_ner.json  doc_03_cleaning_ner.json  doc_04_marketing_ner.json  doc_05_accounting_ner.json  doc_06_nda_no_amount_ner.json  doc_07_training_ocr_noise_ner.json
lessons/03_l8_ya_cloud_ya_gpt/src/: chunker.py  ner_client.py
lessons/04_l11_langchain_RAG/: README.md
lessons/04_l11_langchain_RAG/doc/in/: requirements.txt
